--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,68 +1,80 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+  box-sizing: border-box;
 }
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+:root{
+  --bg: #FAF7F4;
+  --primary: #C9864D;
+  
 }
-a:hover {
-  color: #535bf2;
-}
-
-body {
+body{
   margin: 0;
+  height: 100vh;
+  font-family: "Roboto", sans-serif;
+  background: var(--bg);
+}
+.auth_form{
+  width: 400px;
+  height: 380px;
+  background: #eee;
+  border-radius: 1rem;
+ 
+}
+.auth_page{
+  width: 100%;
+  height: 100vh;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  justify-content: center;
+  align-items: center;
 }
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.auth_form header{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 20px;
+  
 }
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+.auth_form h1{
+  margin: 0;
+}
+.auth_form p{
+  color: gray;
+}
+.auth_form section{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 28px;
+  gap: 10px;
+}
+.btn_login{
+  width: 80%;
+  background: var(--primary);
+}
+.input{
+  width: 80%;
+  outline: none;
+}
+.auth_form footer{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+  
+}
+.btn_empty{
+  color: royalblue;
+  width: 80%;
+  border: 0;
+  outline: none;
   cursor: pointer;
-  transition: border-color 0.25s;
+  font-weight: 500;
+  font-size: 17px;
+  
 }
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.Register{
+  height: 440px;
 }
